--- a/requirements.txt
+++ b/requirements.txt
@@ -3,26 +3,28 @@ annotated-types==0.7.0
 anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-cffi==1.17.0
+cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
 ecdsa==0.19.0
-fastapi==0.112.2
+fastapi==0.114.0
 greenlet==3.0.3
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.8
+packaging==24.1
 passlib==1.7.4
 pyasn1==0.6.0
 pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.9.1
+pydantic_core==2.23.3
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.32
-starlette==0.38.2
+SQLAlchemy==2.0.34
+starlette==0.38.5
 typing_extensions==4.12.2
 uvicorn==0.30.6
