--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,14 @@ click==8.1.7
 colorama==0.4.6
 ecdsa==0.19.0
 fastapi==0.114.0
-greenlet==3.0.3
+greenlet==3.1.0
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.8
 packaging==24.1
 passlib==1.7.4
-pyasn1==0.6.0
+psycopg2==2.9.9
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
