--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,53 @@
-aiofiles==24.1.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+attrs==24.2.0
+certifi==2024.8.30
 cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
+deprecation==2.1.0
 ecdsa==0.19.0
-fastapi==0.114.0
+fastapi==0.114.1
+frozenlist==1.4.1
+gotrue==2.8.1
 greenlet==3.1.0
 gunicorn==23.0.0
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httpx==0.27.2
+hyperframe==6.0.1
 idna==3.8
+multidict==6.1.0
 packaging==24.1
 passlib==1.7.4
+postgrest==0.16.11
 psycopg2==2.9.9
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
+realtime==2.0.2
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.7.4
+supafunc==0.5.1
 typing_extensions==4.12.2
 uvicorn==0.30.6
+websockets==12.0
+yarl==1.11.1
